# RainSweep

./: .env.example  .gitignore  LICENSE  README.md  design.md  inspect_api.py  inspect_api_source.py  inspect_models.py  inspect_search_paged.py  inspect_url.py  investigate_broken.py  investigate_broken_v2.py  main.py  manual_test_url.py  pyproject.toml  reproduce_429_spike.py  test_direct_get.py  test_raindrop_lib.py  test_url_gen.py  warnings_history.json
docs/plans/: 2026-05-19-rate-limit-mitigation.md  2026-05-20-export-import-feature.md  2026-05-21-adaptive-ua-learning.md  2026-05-21-adaptive-user-agent.md  2026-05-21-handle-429-errors.md  2026-05-21-robustness-update.md  2026-05-21-safety-warning-status.md  2026-05-21-ultra-safe-mode.md
src/rainsweep/: checker.py  cleaner.py  client.py  domain_rules.json  history.py  main.py
tests/: test_checker.py  test_cleaner.py  test_client.py  test_history.py
