[project]
name = "rainsweep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic<2.0.0",
    "python-dotenv>=1.2.2",
    "raindrop-io-py>=0.4.7",
]

[project.scripts]
rainsweep = "rainsweep.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]
